<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellowfondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingTop="160dp"
        android:paddingRight="40dp">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/lettersforlearnersdots"
            android:hint="@string/ejemplonombre"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_nombre">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/t_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/tipo_lugar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nombre" />

        <Spinner
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/t_tipo"
            app:layout_constraintTop_toTopOf="@id/t_tipo" />

        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_tipo" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:hint="@string/direccion_ejemplo"
            android:inputType="textPostalAddress"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_direccion" />

        <TextView
            android:id="@+id/t_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/direccion" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:hint="@string/tel_contacto"
            android:inputType="phone"
            android:textSize="28dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/t_telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/t_telefono"
            app:layout_constraintStart_toEndOf="@+id/t_telefono" />

        <TextView
            android:id="@+id/t_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/url"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telefono" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:hint="@string/web"
            android:inputType="textUri"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_url" />

        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:text="@string/comentario"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textFontWeight="700"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lettersforlearnersdots"
            android:hint="@string/notas"
            android:inputType="textMultiLine"
            android:textSize="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/t_comentario" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>